--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10826,7 +10826,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #1a1b1e;
-  font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Open Sans";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10954,6 +10954,49 @@ textarea[name="message"] {
   z-index: -2;
 }
 
+.normal-button {
+  margin-top: 1vmax;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  background: #246bfe;
+  border-radius: 0.8vmin;
+  border: none;
+  width: auto;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  border-radius: 1vmin;
+  pointer-events: auto;
+  -webkit-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
+}
+
+.normal-button:hover,
+.normal-button:focus {
+  background: #2955e5;
+}
+
+@media (min-width: 768px) {
+  .normal-button {
+    padding: 2vmin 4vmin;
+  }
+}
+
+@media (max-width: 768px) {
+  .normal-button {
+    padding: 2vmin 4vmin;
+  }
+}
+
 #container_home {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10992,39 +11035,6 @@ textarea[name="message"] {
   .block__header img {
     width: 95vmin;
   }
-}
-
-.normal-button {
-  margin-top: 1rem;
-  padding-left: 2.4vmax;
-  padding-right: 2.4vmax;
-  padding-top: 1.8vmin;
-  padding-bottom: 1.8vmin;
-  font-size: calc(0.8vw + 0.8vh);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: white;
-  background: #246bfe;
-  border-radius: 0.8vmin;
-  border: none;
-  width: auto;
-  height: auto;
-  pointer-events: auto;
-  -webkit-transition: 200ms ease-in-out;
-  transition: 200ms ease-in-out;
-}
-
-.normal-button:hover,
-.normal-button:focus {
-  background: #2955e5;
 }
 
 #skills {
@@ -11288,13 +11298,13 @@ textarea[name="message"] {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-transition: 250ms ease-in-out;
-  transition: 250ms ease-in-out;
+  -webkit-transition: 250ms ease-in;
+  transition: 250ms ease-in;
   -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
           box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
 }
 
-.project__card .project_card--info {
+.project__card .project_card--header {
   padding: 10% 10% 0% 10%;
 }
 
@@ -11310,6 +11320,78 @@ textarea[name="message"] {
 .project__card:hover {
   -webkit-box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
           box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+}
+
+.project_card--info {
+  width: 0%;
+  height: 60%;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  left: 0;
+  top: 30%;
+  float: left;
+  border-radius: 0 1vmin 1vmin 0;
+  overflow: hidden;
+  -webkit-transition: width 250ms;
+  transition: width 250ms;
+}
+
+.project_card--desc {
+  padding: 5% 5% 5% 10%;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.project_card--desc .badge {
+  margin-top: 1vmin;
+  margin-right: 1vmin;
+}
+
+.project_card--desc .normal-button {
+  width: 70%;
+}
+
+.project_card--desc a img {
+  margin-top: 1vmax;
+  width: auto;
+  border-radius: 1vmin;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+  -webkit-box-shadow: 0 0.5vmin 0.5vmin rgba(0, 0, 0, 0.16);
+          box-shadow: 0 0.5vmin 0.5vmin rgba(0, 0, 0, 0.16);
+}
+
+.project_card--desc a img:hover {
+  -webkit-box-shadow: 0 1vmin 1vmin rgba(0, 0, 0, 0.16);
+          box-shadow: 0 1vmin 1vmin rgba(0, 0, 0, 0.16);
+}
+
+.desc-seperator {
+  width: 100%;
+  height: 0.15vmin;
+  margin-top: 1vmax;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+@media (min-width: 768px) {
+  .badge {
+    padding: 1vmin 2vmin;
+  }
+  .project_card--desc a img {
+    height: 3vmax;
+  }
+}
+
+@media (max-width: 768px) {
+  .badge {
+    padding: 2vmin 4vmin;
+  }
+  .project_card--desc a img {
+    height: 5vmax;
+  }
 }
 
 /* 
@@ -11772,6 +11854,9 @@ footer {
   li {
     font-size: clamp(13px, calc(1.15vw + 1.15vh), 32px);
   }
+  .normal-button {
+    font-size: clamp(13px, calc(1.15vw + 1.15vh), 32px);
+  }
 }
 
 @media (min-width: 1024px) {
@@ -11787,6 +11872,13 @@ footer {
   li {
     font-size: clamp(13px, calc(0.6vw + 0.6vh), 64px);
   }
+  .normal-button {
+    font-size: clamp(13px, calc(0.6vw + 0.6vh), 64px);
+  }
+}
+
+.badge {
+  font-size: clamp(11px, calc(0.6vw + 0.6vh), 64px);
 }
 
 h1 {
