--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10826,7 +10826,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #1a1b1e;
-  font-family: "Open Sans";
+  font-family: "Product Sans";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10924,7 +10924,6 @@ textarea[name="message"] {
   z-index: -2;
   color: black;
   font-size: calc(5vw + 5vh);
-  font-weight: 800;
 }
 
 .page__header-foreground {
@@ -11276,7 +11275,12 @@ textarea[name="message"] {
   margin-bottom: 8vmin;
 }
 
-.container_project-block {
+.project {
+  width: 100%;
+  height: 60vmin;
+  background-color: #2d2e32;
+  border-radius: 1vmin;
+  margin-bottom: 3vmax;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11284,271 +11288,186 @@ textarea[name="message"] {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  padding-top: 1vmax;
-  padding-bottom: 1vmax;
-}
-
-.block_card-thumbnail {
-  height: 60vmin;
-  width: 45%;
-  background-color: #246bfe;
-  border-radius: 1vmin;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.block_card-thumbnail img {
-  width: auto;
-  height: 100%;
-}
-
-.block__card-info {
-  height: 60vmin;
-  width: 55%;
-  padding: 2vmax;
-}
-
-.container_projects {
-  display: -ms-grid;
-  display: grid;
-  gap: 4vmin;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-}
-
-.project__card {
-  border-radius: 1vmin;
-  position: relative;
   overflow: hidden;
+}
+
+.project_container_img {
+  width: 55%;
+  height: 100%;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.project_container_desc {
+  width: 45%;
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-transition: 250ms ease-in;
-  transition: 250ms ease-in;
-  -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
-          box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+  padding-top: 5%;
 }
 
-.project__card .project_card--header {
-  padding: 10% 10% 0% 10%;
+.project_container_desc .project_desc_header {
+  padding-left: 5%;
 }
 
-.project__card img {
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  -webkit-transition-property: -webkit-filter;
-  transition-property: -webkit-filter;
-  transition-property: filter;
-  transition-property: filter, -webkit-filter;
+.project_container_desc .project_desc_chips {
+  width: 100%;
+  height: 25%;
+  background-color: black;
+  position: absolute;
+  left: 0;
+  top: 37.5%;
+  padding: 2% 5% 2% 5%;
 }
 
-.project__card:hover {
+.project_container_desc .project_desc_chips .badge {
+  margin-top: 1vmin;
+  margin-right: 1vmin;
+  padding: 1vmin 3vmin;
+  background-color: #246bfe;
+}
+
+.project_container_desc .project_desc_links {
+  margin-top: 27%;
+  margin-left: 5%;
+}
+
+.project_container_desc .project_desc_links a {
+  margin-right: 1vmin;
+  -webkit-filter: brightness(0.8);
+          filter: brightness(0.8);
+}
+
+.project_container_desc .project_desc_links a img {
+  height: 8vmin;
+  width: auto;
+}
+
+.project_container_desc .project_desc_links :hover {
+  -webkit-box-shadow: 0 2vmin 2vmin rgba(0, 0, 0, 0.16);
+          box-shadow: 0 2vmin 2vmin rgba(0, 0, 0, 0.16);
+  -webkit-transition: all 150ms ease-in;
+  transition: all 150ms ease-in;
+  -webkit-filter: brightness(100%);
+          filter: brightness(100%);
+}
+
+.project_img {
+  width: 100%;
+  height: 90%;
+  border-radius: 1vmin;
+  overflow: hidden;
+  margin-left: 5%;
   -webkit-box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
           box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
 }
 
-.project_card--info {
-  width: 0%;
-  height: 60%;
-  background-color: rgba(255, 255, 255, 0.8);
-  position: absolute;
-  left: 0;
-  top: 30%;
-  float: left;
-  border-radius: 0 1vmin 1vmin 0;
-  overflow: hidden;
-  -webkit-transition: width 250ms;
-  transition: width 250ms;
-}
-
-.project_card--desc {
-  padding: 5% 5% 5% 10%;
-  display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.project_card--desc .badge {
-  margin-top: 1vmin;
-  margin-right: 1vmin;
-}
-
-.project_card--desc .normal-button {
-  width: 70%;
-}
-
-.project_card--desc a img {
-  margin-top: 1vmax;
+.project_img img {
   width: auto;
-  border-radius: 1vmin;
-  -webkit-transition: all 250ms ease-in-out;
-  transition: all 250ms ease-in-out;
-  -webkit-box-shadow: 0 0.5vmin 0.5vmin rgba(0, 0, 0, 0.16);
-          box-shadow: 0 0.5vmin 0.5vmin rgba(0, 0, 0, 0.16);
-}
-
-.project_card--desc a img:hover {
-  -webkit-box-shadow: 0 1vmin 1vmin rgba(0, 0, 0, 0.16);
-          box-shadow: 0 1vmin 1vmin rgba(0, 0, 0, 0.16);
-}
-
-.desc-seperator {
-  width: 100%;
-  height: 0.15vmin;
-  margin-top: 1vmax;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-@media (min-width: 768px) {
-  .badge {
-    padding: 1vmin 2vmin;
-  }
-  .project_card--desc a img {
-    height: 3vmax;
-  }
-}
-
-@media (max-width: 768px) {
-  .badge {
-    padding: 2vmin 4vmin;
-  }
-  .project_card--desc a img {
-    height: 5vmax;
-  }
-}
-
-/* 
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
-@media (min-width: 1281px) {
-  /* CSS */
-  .container_projects {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-/* 
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
-@media (min-width: 1025px) and (max-width: 1280px) {
-  /* CSS */
-  .container_projects {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* 
-  ##Device = Tablets, Ipads (portrait)
-  ##Screen = B/w 768px to 1024px
-*/
-@media (min-width: 768px) and (max-width: 1024px) {
-  /* CSS */
-  .container_projects {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-/* 
-  ##Device = Tablets, Ipads (landscape)
-  ##Screen = B/w 768px to 1024px
-*/
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  /* CSS */
-  .container_projects {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* 
-  ##Device = Low Resolution Tablets, Mobiles (Landscape)
-  ##Screen = B/w 481px to 767px
-*/
-@media (min-width: 481px) and (max-width: 767px) {
-  /* CSS */
-  .container_projects {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* 
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
-@media (min-width: 320px) and (max-width: 480px) {
-  /* CSS */
-  .container_projects {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-#one {
-  background: #246bfe;
-}
-
-#two {
-  background: -webkit-gradient(linear, left top, right top, from(#FFB22A), to(#FF685E));
-  background: linear-gradient(to right, #FFB22A, #FF685E);
-}
-
-#six {
-  background: -webkit-gradient(linear, left top, right top, from(#FFB22A), to(#FF685E));
-  background: linear-gradient(to right, #FFB22A, #FF685E);
-}
-
-#three {
-  background: -webkit-gradient(linear, left top, right top, from(#4BBFAA), to(#BBCD61));
-  background: linear-gradient(to right, #4BBFAA, #BBCD61);
-}
-
-#four {
-  background-color: #00A9FE;
-}
-
-#five {
-  background-color: #8C2165;
-}
-
-#five #project__card-image {
-  width: 100%;
   height: 100%;
-  background-size: cover;
 }
 
-#seven {
-  background: -webkit-gradient(linear, left top, right top, from(#4776E6), to(#8E54E9));
-  background: linear-gradient(to right, #4776E6, #8E54E9);
+.project_img_overlay {
+  width: 100%;
+  height: 25%;
+  position: absolute;
+  left: 5%;
+  top: 37.5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 250ms ease-in-out;
+  transition: 250ms ease-in-out;
 }
 
-#ten {
-  background: -webkit-gradient(linear, left top, right top, from(#00bf8f), to(#232526));
-  background: linear-gradient(to right, #00bf8f, #232526);
+.project_counter {
+  background-color: black;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 2;
 }
 
-#eight {
-  background-color: #F68633;
+.project_case_study {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(36, 107, 254, 0.8);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+  animation: slide-out 300ms forwards;
+  -webkit-animation: slide-out 300ms forwards;
 }
 
-#nine {
-  background: -webkit-gradient(linear, left top, right top, from(#414345), to(#232526));
-  background: linear-gradient(to right, #414345, #232526);
+.project:hover .project_case_study {
+  animation: slide-in 300ms forwards;
+  -webkit-animation: slide-in 300ms forwards;
+}
+
+@keyframes slide-in {
+  100% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
+@-webkit-keyframes slide-in {
+  100% {
+    -webkit-transform: translateX(0%);
+  }
+}
+
+@keyframes slide-out {
+  0% {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  100% {
+    -webkit-transform: translateX(-150%);
+            transform: translateX(-150%);
+  }
+}
+
+@-webkit-keyframes slide-out {
+  0% {
+    -webkit-transform: translateX(0%);
+  }
+  100% {
+    -webkit-transform: translateX(-150%);
+  }
 }
 
 footer {
@@ -11874,6 +11793,22 @@ footer {
   margin-top: 4vmin;
 }
 
+p, h1, h2, h3, h4, h5, h6, label {
+  filter: brightness(80%);
+  -webkit-filter: brightness(80%);
+  -moz-filter: brightness(80%);
+  -o-filter: brightness(80%);
+  -ms-filter: brightness(80%);
+}
+
+img {
+  filter: brightness(90%);
+  -webkit-filter: brightness(90%);
+  -moz-filter: brightness(90%);
+  -o-filter: brightness(90%);
+  -ms-filter: brightness(90%);
+}
+
 @media (max-width: 1024px) {
   p, label {
     font-size: clamp(13px, calc(1.15vw + 1.15vh), 32px);
@@ -11961,11 +11896,11 @@ h6 {
 }
 
 .heavy-bold {
-  font-weight: 900;
+  font-family: 'Product Sans Black';
 }
 
 .extra-bold {
-  font-weight: 800;
+  font-weight: 700;
 }
 
 .semi-bold {
@@ -11977,19 +11912,19 @@ h6 {
 }
 
 .regular {
-  font-weight: normal;
+  font-family: 'Product Sans';
 }
 
 .medium {
-  font-weight: 500;
+  font-family: 'Product Sans Medium';
 }
 
 .light {
-  font-weight: 300;
+  font-family: 'Product Sans Light';
 }
 
 .thin {
-  font-weight: 100;
+  font-family: 'Product Sans Thin';
 }
 
 .color-primary {
@@ -12006,6 +11941,10 @@ h6 {
 
 .color-white {
   color: white;
+}
+
+.color-white-light {
+  color: #bbbbbb;
 }
 
 .bg-primary {
