--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,7 +15,8 @@ $icon--color: #1a1b1e;
 $font--color: #ffffff;
 $font--color-light: #bbbbbb;
 $font--secondary: "JetBrainsMono";
-$font--primary: "Open Sans";
+//$font--primary: "Open Sans";
+$font--primary: "Product Sans";
 $transition--length: 0.8;
 
 
@@ -196,7 +197,6 @@ textarea[name="message"] {
   z-index: -2;
   color: black;
   font-size: $font_size_huge_x;
-  font-weight: 800;
 }
 
 .page__header-foreground {
@@ -549,286 +549,152 @@ textarea[name="message"] {
   margin-bottom: 8vmin;
 }
 
-
-.container_project-block {
-  display: flex;
-  //width: 100vw;
-  flex-direction: row;
-  padding-top: 1vmax;
-  padding-bottom: 1vmax;
-}
-
-.block_card-thumbnail {
-  height: 60vmin;
-  width: 45%;
-  background-color: $primary-color;
-  border-radius: 1vmin;
-  justify-content: center;
-
-  img {
-    width: auto;
-    height: 100%;
-  }
-}
-
-.block__card-info {
-  height: 60vmin;
-  width: 55%;
-  padding: 2vmax;
-  //background-color: orange;
-}
-
-
-.container_projects {
-  display: grid;
-  gap: 4vmin;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.project__card {
-  border-radius: 1vmin;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transition: 250ms ease-in;
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
-
-  .project_card--header {
-    padding: 10% 10% 0% 10%;
-  }
-
-  img {
-    transition: all 0.3s ease-in-out;
-    transition-property: filter;
-  }
-}
-
-.project__card:hover {
-  box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
-  //transform: translate(0, -1vmin);
-}
-
-// .project__card-image:hover + .project_card--info{
-//   width: 90%;
-// }
-
-
-.project_card--info {
-  width: 0%;
-  height: 60%;
-  background-color: rgba(255, 255, 255, 0.8);
-  position: absolute;
-  left: 0;
-  top: 30%;
-  float: left;
-  border-radius: 0 1vmin 1vmin 0;
-  //position: relative;
-  overflow: hidden;
-  //display: none;
-  transition: width 250ms;
-}
-
-.project_card--desc {
-  padding: 5% 5% 5% 10%;
-  display: none;
-  flex-direction: column;
-
-  .badge {
-    margin-top: 1vmin;
-    margin-right: 1vmin;
-  }
-
-  .normal-button {
-    width: 70%;
-  }
-
-  a img{
-    //padding-top: 2vmin;
-    margin-top: 1vmax;
-    width: auto;
-    border-radius: 1vmin;
-    transition: all 250ms ease-in-out;
-    box-shadow: 0 0.5vmin 0.5vmin rgba(0, 0, 0, 0.16);
-  }
-
-  a img:hover {
-    box-shadow: 0 1vmin 1vmin rgba(0, 0, 0, 0.16);
-  }
-}
-
-.desc-seperator {
+.project {
   width: 100%;
-  height: 0.15vmin;
-  margin-top: 1vmax;
-  //margin-bottom: 1vmax;
-  background-color: rgba(0, 0, 0, 0.8);
+  height: 60vmin;
+  background-color: $background--color-light;
+  border-radius: 1vmin;
+  margin-bottom: 3vmax;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
 }
 
+.project_container_img {
+  width: 55%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-@media (min-width: $media-query-max-width-tablet) {
-  .badge {
-    padding: 1vmin 2vmin;
+.project_container_desc {
+  width: 45%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  padding-top: 5%;
+
+  .project_desc_header {
+    padding-left: 5%;
   }
 
-  .project_card--desc a img {
-    height: 3vmax;
-  }
-
-}
-
-@media (max-width: $media-query-max-width-tablet) {
-  .badge {
-    padding: 2vmin 4vmin;
-  }
-
-  .project_card--desc a img {
-    height: 5vmax;
-  }
-}
-
-
-
-// .project_card--info:hover {
-//   width: 90%;
-// }
-
-
-
-/* 
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
-
-@media (min-width: 1281px) {
-  
-  /* CSS */
-  .container_projects {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-/* 
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
-
-@media (min-width: 1025px) and (max-width: 1280px) {
-  
-  /* CSS */
-  .container_projects {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* 
-  ##Device = Tablets, Ipads (portrait)
-  ##Screen = B/w 768px to 1024px
-*/
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  
-  /* CSS */
-  .container_projects {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-/* 
-  ##Device = Tablets, Ipads (landscape)
-  ##Screen = B/w 768px to 1024px
-*/
-
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  
-  /* CSS */
-  .container_projects {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* 
-  ##Device = Low Resolution Tablets, Mobiles (Landscape)
-  ##Screen = B/w 481px to 767px
-*/
-
-@media (min-width: 481px) and (max-width: 767px) {
-  
-  /* CSS */
-  .container_projects {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* 
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
-
-@media (min-width: 320px) and (max-width: 480px) {
-  
-  /* CSS */
-  .container_projects {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-
-
-
-
-#one {
-  background: $primary-color;
-}
-
-
-#two {
-  background: $pika_games-color;
-}
-
-#six {
-  background: $pika_games-color;
-}
-
-
-
-
-
-#three {
-  background: $eklavya_study-color;
-}
-
-#four {
-  background-color: #00A9FE;
-}
-
-#five {
-  background-color: #8C2165;
-
-  #project__card-image {
+  .project_desc_chips {
     width: 100%;
-    height: 100%;
-    background-size: cover;
+    height: 25%;
+    background-color: black;
+    position: absolute;
+    left: 0;
+    top: 37.5%;
+    padding: 2% 5% 2% 5%;
+
+    .badge {
+      margin-top: 1vmin;
+      margin-right: 1vmin;
+      padding: 1vmin 3vmin;
+      background-color: $primary-color;
+    }
+  }
+
+  .project_desc_links {
+    margin-top: 27%;
+    margin-left: 5%;
+
+    a {
+      margin-right: 1vmin;
+      filter: brightness(0.8);
+      
+      img {
+        height: 8vmin;
+        width: auto;
+      }
+    }
+
+    :hover {
+      box-shadow: 0 2vmin 2vmin rgba(0, 0, 0, 0.16);
+      transition: all 150ms ease-in;
+      filter: brightness(100%);
+    }
   }
 }
 
+.project_img {
+  width: 100%;
+  height: 90%;
+  border-radius: 1vmin;
+  overflow: hidden;
+  margin-left: 5%;
+  box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
 
-#seven {
-  background: $window-app-color;
+  img {
+    width: auto;
+    height: 100%;
+  }
 }
 
-#ten {
-  background: $liveslider-color;
+.project_img_overlay {
+  width: 100%;
+  height: 25%;
+  position: absolute;
+  left: 5%;
+  top: 37.5%;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  transition: 250ms ease-in-out;
 }
 
-#eight {
-  background-color: #F68633;
+.project_counter {
+  background-color: black;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  z-index: 2;
 }
 
-#nine {
-  background: $folio-web-color;
+.project_case_study {
+  height: 100%;
+  width: 100%;
+  background-color: rgba($primary-color, .8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+  animation: slide-out 300ms forwards;
+  -webkit-animation: slide-out 300ms forwards;
 }
+
+.project:hover {
+  .project_case_study {
+    animation: slide-in 300ms forwards;
+    -webkit-animation: slide-in 300ms forwards;
+  }
+}
+  
+@keyframes slide-in {
+  100% { transform: translateX(0%); }
+}
+
+@-webkit-keyframes slide-in {
+  100% { -webkit-transform: translateX(0%); }
+}
+  
+@keyframes slide-out {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(-150%); }
+}
+
+@-webkit-keyframes slide-out {
+  0% { -webkit-transform: translateX(0%); }
+  100% { -webkit-transform: translateX(-150%); }
+}
+
+
+
 
 
 
@@ -1187,6 +1053,23 @@ footer {
 // 
 //===================================================================================//
 
+p,h1,h2,h3,h4,h5,h6,label {
+  filter: brightness(80%);
+  -webkit-filter: brightness(80%);
+  -moz-filter: brightness(80%);
+  -o-filter: brightness(80%);
+  -ms-filter: brightness(80%);
+}
+
+img {
+  filter: brightness(90%);
+  -webkit-filter: brightness(90%);
+  -moz-filter: brightness(90%);
+  -o-filter: brightness(90%);
+  -ms-filter: brightness(90%);
+}
+
+
 @media (max-width: $media-query-max-width-laptop) {
 
   p,label {
@@ -1208,8 +1091,6 @@ footer {
   .normal-button {
     font-size: clamp(13px, $font_size_normal_xx, 32px);
   }
-
-
 
 }
 
@@ -1306,11 +1187,11 @@ h6 {
 }
 
 .heavy-bold {
-  font-weight: 900;
+  font-family: 'Product Sans Black';
 }
 
 .extra-bold {
-  font-weight: 800;
+  font-weight: 700;
 }
 
 .semi-bold {
@@ -1322,19 +1203,19 @@ h6 {
 }
 
 .regular {
-  font-weight: normal;
+  font-family: 'Product Sans';
 }
 
 .medium {
-  font-weight: 500;
+  font-family: 'Product Sans Medium';
 }
 
 .light {
-  font-weight: 300;
+  font-family: 'Product Sans Light';
 }
 
 .thin {
-  font-weight: 100;
+  font-family: 'Product Sans Thin';
 }
 
 //--------------------------------------------------------------------------------//
@@ -1367,6 +1248,10 @@ h6 {
 
 .color-white {
   color: white;
+}
+
+.color-white-light {
+  color: $font--color-light;
 }
 
 .bg-primary {
