--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -38,7 +38,7 @@ $liveslider-color: linear-gradient(to right,#00bf8f,#232526);
 //widgets responsive sizes
 $button_margin_h: 2.4vmax;
 $button_margin_v: 1.8vmin;
-$border_radius: 0.8vmin;
+$border_radius: 1vmin;
 
 
 //font resonsive sizes
@@ -124,8 +124,6 @@ textarea[name="message"] {
   border-radius: 0.5vmin;
   padding: 2.5vmin 2vmin;
 }
-
-
 
 
 //----------------------------------------------------------------------------------// 
@@ -234,7 +232,6 @@ textarea[name="message"] {
   border: none;
   width: auto;
   height: min-content;
-  border-radius: 1vmin;
   pointer-events: auto;
   transition: 200ms ease-in-out;
 }
@@ -325,7 +322,7 @@ textarea[name="message"] {
 .skills__card {
   min-height: fit-content;
   background: $background--color-light;
-  border-radius: 0.5vmin;
+  border-radius: $border_radius;
   border-top: 1vmin solid black;
   transition: 250ms ease-in-out;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
@@ -346,6 +343,7 @@ textarea[name="message"] {
 .skills_box {
   height: 0;
   padding-bottom: 100%;
+  border-radius: 0.5vmin;
 }
 
 .skills_box_rect {
@@ -354,6 +352,7 @@ textarea[name="message"] {
   display: flex;
   align-items: center;
   justify-content: start;
+  border-radius: 0.5vmin;
 }
 
 .box-logo img {
@@ -476,7 +475,8 @@ textarea[name="message"] {
   box-shadow: 0 0 6px 0 rgba(#202024, .12);
   transition: all .35s ease;
   position: relative;
-  border-radius: 0.5vmin;
+  //overflow: hidden;
+  border-radius: $border_radius;
   border-top: 1vmin solid black;
 }
 
@@ -525,6 +525,7 @@ textarea[name="message"] {
   padding: 2.5vmin;
   display: flex;
   flex-direction: row;
+  border-radius: 0 0 $border_radius $border_radius;
 }
 
 
@@ -551,45 +552,97 @@ textarea[name="message"] {
 
 .project {
   width: 100%;
-  height: 60vmin;
+  height: auto;
   background-color: $background--color-light;
-  border-radius: 1vmin;
+  border-radius: $border_radius;
   margin-bottom: 3vmax;
   display: flex;
-  flex-direction: row;
   overflow: hidden;
+  transition: all 250ms ease-in;
 }
 
+
 .project_container_img {
-  width: 55%;
-  height: 100%;
+  width: 100%;
+  height: 60vmin;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .project_img {
+    width: 100%;
+    height: 85%;
+    border-radius: $border_radius;
+    overflow: hidden;
+    box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+  
+    img {
+      width: auto;
+      height: 100%;
+    }
+  }
+  
+  .project_img_overlay {
+    height: 16vmin;
+    position: absolute;
+    left: 5%;
+    top: 22vmin;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    transition: 250ms ease-in-out;
+
+    .project_counter {
+      background-color: black;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      z-index: 2;
+    }
+    
+    .project_case_study {
+      height: 100%;
+      width: 100%;
+      background-color: rgba($primary-color, .8);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
+      animation: slide-out 300ms forwards;
+      -webkit-animation: slide-out 300ms forwards;
+    }
+  }
+
 }
 
 .project_container_desc {
-  width: 45%;
-  height: 100%;
+  width: 100%;
+  height: auto;
   position: relative;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  padding-top: 5%;
 
   .project_desc_header {
-    padding-left: 5%;
+    height: 22vmin;
+    width: 100%;
+    padding: 5%;
+    position: relative;
+    
+
+    .project_desc_header-box {
+      position: absolute;
+      bottom: 3vmin;
+    }
   }
 
   .project_desc_chips {
     width: 100%;
-    height: 25%;
+    min-height: 16vmin;
+    height: auto;
     background-color: black;
-    position: absolute;
-    left: 0;
-    top: 37.5%;
-    padding: 2% 5% 2% 5%;
 
     .badge {
       margin-top: 1vmin;
@@ -600,8 +653,12 @@ textarea[name="message"] {
   }
 
   .project_desc_links {
-    margin-top: 27%;
-    margin-left: 5%;
+    height: 22vmin;
+    width: 100%;
+    // position: absolute;
+    // bottom: 0;
+    padding-left: 5%;
+    padding-top: 5%;
 
     a {
       margin-right: 1vmin;
@@ -621,59 +678,15 @@ textarea[name="message"] {
   }
 }
 
-.project_img {
-  width: 100%;
-  height: 90%;
-  border-radius: 1vmin;
-  overflow: hidden;
-  margin-left: 5%;
-  box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
-
-  img {
-    width: auto;
-    height: 100%;
-  }
-}
-
-.project_img_overlay {
-  width: 100%;
-  height: 25%;
-  position: absolute;
-  left: 5%;
-  top: 37.5%;
-  display: flex;
-  overflow: hidden;
-  align-items: center;
-  transition: 250ms ease-in-out;
-}
-
-.project_counter {
-  background-color: black;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  z-index: 2;
-}
-
-.project_case_study {
-  height: 100%;
-  width: 100%;
-  background-color: rgba($primary-color, .8);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transform: translateX(-100%);
-  -webkit-transform: translateX(-100%);
-  animation: slide-out 300ms forwards;
-  -webkit-animation: slide-out 300ms forwards;
-}
-
 .project:hover {
+
   .project_case_study {
     animation: slide-in 300ms forwards;
     -webkit-animation: slide-in 300ms forwards;
   }
+  
 }
+
   
 @keyframes slide-in {
   100% { transform: translateX(0%); }
@@ -693,6 +706,45 @@ textarea[name="message"] {
   100% { -webkit-transform: translateX(-150%); }
 }
 
+
+@media (max-width: $media-query-max-width-tablet) {
+  .project {
+    flex-direction: column;
+    border-top: 1vmin solid black;
+  }
+
+  .project_img {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .project_img_overlay {
+    width: 90%; 
+  }
+
+  .project_desc_chips {
+    padding: 5%;
+  }
+}
+
+@media (min-width: $media-query-max-width-tablet) {
+  .project {
+    flex-direction: row;
+    border-left: 1vmin solid black;
+  }
+
+  .project_img {
+    margin-left: 5%;
+  }
+
+  .project_img_overlay {
+    width: 100%; 
+  }
+
+  .project_desc_chips {
+    padding: 2% 5% 2% 5%;
+  }
+}
 
 
 
@@ -747,7 +799,7 @@ footer {
   align-items: center;
   justify-content: center;
   margin-top: 4vmin;
-  border-radius: 1vmin;
+  border-radius: $border_radius;
   padding-top: 4vmin;
   padding-bottom: 4vmin;
   margin-bottom: 10vh;
@@ -868,7 +920,7 @@ footer {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
     background-color: $primary-color;
     display: flex;
-    z-index: 2;
+    z-index: 3;
     overflow-x: auto;
   }
 
@@ -961,7 +1013,7 @@ footer {
 
 .block__contact {
   background-color: $background--color-light;
-  border-radius: 1vmin;
+  border-radius: $border_radius;
   height: fit-content;
   padding: 11vmin;
 }
@@ -1062,11 +1114,11 @@ p,h1,h2,h3,h4,h5,h6,label {
 }
 
 img {
-  filter: brightness(90%);
-  -webkit-filter: brightness(90%);
-  -moz-filter: brightness(90%);
-  -o-filter: brightness(90%);
-  -ms-filter: brightness(90%);
+  filter: brightness(80%);
+  -webkit-filter: brightness(80%);
+  -moz-filter: brightness(80%);
+  -o-filter: brightness(80%);
+  -ms-filter: brightness(80%);
 }
 
 
@@ -1098,29 +1150,29 @@ img {
 @media (min-width: $media-query-max-width-laptop) {
 
   p,label {
-    font-size: clamp(13px, $font_size_small_x, 64px);
+    font-size: clamp(16px, $font_size_small_x, 64px);
   }
   
   input[type="text"],input[type="email"] {
-    font-size: clamp(13px, $font_size_small_x, 64px);
+    font-size: clamp(16px, $font_size_small_x, 64px);
   }
   
   textarea[name="message"] {
-    font-size: clamp(13px, $font_size_small_x, 64px);
+    font-size: clamp(16px, $font_size_small_x, 64px);
   }
   
   li  {
-    font-size: clamp(13px, $font_size_small_x, 64px);
+    font-size: clamp(16px, $font_size_small_x, 64px);
   }
 
   .normal-button {
-    font-size: clamp(13px, $font_size_small_x, 64px);
+    font-size: clamp(16px, $font_size_small_x, 64px);
   }
 
 }
 
 .badge {
-  font-size: clamp(11px, $font_size_small_x, 64px);
+  font-size: clamp(13px, $font_size_small_x, 64px);
 }
 
 h1 {
